k8s/manifests/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: pingpong
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
